--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,7 @@
       crossorigin="anonymous"
     />
     <title>Couple Finance</title>
+    <script id="react-dotenv" src="./env.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
